_sass/jekyll_cmdbrew/layouts/_default.scss
@include layout($template: 'default') {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  overflow: hidden;

  @include media-breakpoint-down(#{nth(map-keys($grid-breakpoints), index(map-keys($grid-breakpoints), map-get($breakpoints, 'aside')) - 1)}) {
    $_offset: map-get($spacers, 3) * 2;
    $_height: $input-height-lg;
    max-width: 100%;
    padding-bottom: calc(#{$_offset} + #{$_height});
  }

  @include media-breakpoint-up(#{map-get($breakpoints, 'aside')}) {
    main { max-width: calc(100% - #{$aside-width}); }
  }

  #wrapper {
    display: flex;
    flex: 1;
    flex-direction: row;
    width: 100%;
    height: 100%;
  }

  main {
    display: flex;
    flex: 1;
    flex-direction: column;
    width: 100%;
    overflow-wrap: break-word;

    #main-avatar {
      @extend %background-cover;
      width: $avatar-size;
      height: $avatar-size;
      margin-top: calc(-#{map-get($thumbnail-sizes, 'lg')} / 2);
      border: 4px solid $body-bg;
    }
  }

  #content {
    display: flex;
    flex: 1;
    flex-direction: column;
  }

  #header {
    flex-shrink: 0;
  }

  .visible-collapse { display: none; }

  @include media-breakpoint-down(#{nth(map-keys($grid-breakpoints), index(map-keys($grid-breakpoints), map-get($breakpoints, 'aside')) - 1)}) {
    .hidden-collapse { display: none; }
    .visible-collapse { display: block; }
  }
}

